FIX: Scroller having display flex making content overflow

--- a/apps/web/app/styles/core.css
+++ b/apps/web/app/styles/core.css
@@ -23,6 +23,7 @@
   .cm-scroller {
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+    display: block !important;
   }
 
   .cm-editor {
